Move flask backend server into main component
Remove spring part

Keep it simple
